// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertWidget Alert firing displays a warning icon and matches snapshot 1`] = `
<gl-badge-stub
  class="d-flex-center text-truncate"
  size="md"
  variant="danger"
>
  <gl-icon-stub
    class="flex-shrink-0"
    name="warning"
    size="16"
  />
   
  <span
    class="text-truncate gl-pl-2"
  >
    Firing: 
            alert-label &gt; 42
          
  </span>
</gl-badge-stub>
`;

exports[`AlertWidget Alert not firing displays a warning icon and matches snapshot 1`] = `
<gl-badge-stub
  class="d-flex-center text-truncate"
  size="md"
  variant="neutral"
>
  <gl-icon-stub
    class="flex-shrink-0"
    name="warning"
    size="16"
  />
   
  <span
    class="text-truncate gl-pl-2"
  >
    alert-label &gt; 42
  </span>
</gl-badge-stub>
`;
